[Bug] uses vh and vw instead of px and em.  Looks better on iPhone. Closes #4.

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
-.logo.yew:hover {
-  filter: drop-shadow(0 0 2em #20a88a);
-}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 5vw;
+  line-height: 7.5vw;
   font-weight: 400;
 
   color: #0f0f0f;
@@ -19,27 +16,11 @@
 
 .container {
   margin: 0;
-  padding-top: 10vh;
+  padding-top: 20vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
-  display: flex;
-  justify-content: center;
 }
 
 a {
@@ -52,20 +33,16 @@ a:hover {
   color: #535bf2;
 }
 
-h1 {
-  text-align: center;
-}
-
 input,
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  border-radius: 3vw;
+  border: 0.25vw solid transparent;
+  padding: 2.4vw 4.8vw;
+  font-size: 4vw;
   font-weight: 500;
   font-family: inherit;
   transition: border-color 0.25s;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.5vw 0.5vw rgba(0, 0, 0, 0.2);
 }
 
 input,
@@ -100,10 +77,6 @@ button {
   outline: none;
 }
 
-#greet-input {
-  margin-right: 5px;
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
@@ -128,7 +101,7 @@ button {
   list-style-type: none; /* Removes the numbers from the list items */
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* Creates three equal-width columns */
-  gap: 10px; /* Adds spacing between the items */
+  gap: 2.5vw; /* Adds spacing between the items */
   padding: 0;
  }   
 
